===========
pyprototypr
===========

Changes
=======

2016-02-05 (0.1.0a6)
--------------------
* First draft!

2023-02-04 (0.1.2a1)
--------------------
* Upgrade to Python 3.11
* Patch code for changes related to Python and library upgrades
* Switch to using bgg-api library
* Improve examples

2023-04-09 (0.1.3a1)
--------------------
* Add more shapes
* Refactor draw() method
* Improve examples
* Add documentation

2023-04-09 (0.1.5a3)
--------------------
* Add more shapes
* Improve examples